# php-serialize-py

./: .gitignore  .pre-commit-config.yaml  meson.build  pyproject.toml  readme.md  requirements.txt
.github/: mergify.yml  renovate.json
.github/workflows/: _build_wheels.yaml  lint.yaml  release.yaml  tests.yaml
build_backend/: wheel_build.py
src/php_serialize/: __init__.py
tests/: conftest.py  phpseralize_test.py
