[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "php-serialize"
version = "0.0.1"
description = "handle contents of serialize/deserialize in php"
license = { text = "MIT" }
requires-python = ">=3.9,<4.0"
authors = [
    { name = "trim21", email = "trim21me@gmail.com" },
]
readme = 'readme.md'
keywords = [
    "bencode",
    "bittorrent",
    "bit-torrent",
    "serialize",
    "deserialize",
    'p2p',
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    'typing-extensions>=4.12.2',
]

[project.urls]
Homepage = "https://github.com/trim21/php-serialize-py"
Repository = "https://github.com/trim21/php-serialize-py"
Issues = "https://github.com/trim21/php-serialize-py/issues"

[tool.hatch.build.targets.sdist]
sources = ["src/"]
include = ['src/']

[tool.hatch.build.targets.wheel]
packages = ["src/php_serialize"]

[tool.hatch.build.targets.wheel.hooks.cython]
enable-by-default = false
dependencies = ["hatch-cython<1"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
directives = { boundscheck = false, nonecheck = false, language_level = 3, binding = true }
src = "php_serialize"

[tool.cibuildwheel]
before-build = "python cleanup.py"
skip = "pp* *musllinux*"

[tool.cibuildwheel.environment]
HATCH_BUILD_HOOKS_ENABLE = "1"

[tool.black]
target-version = ['py39']
line-length = 88

[tool.ruff]
target-version = 'py39'
line-length = 88

src = ['src', 'tests']

[tool.ruff.lint]
extend-select = ['UP', 'I', 'E', "W", 'FA', 'ANN']
ignore = ['ANN101', 'ANN401', 'E721', 'E501']

[tool.ruff.lint.per-file-ignores]
"tests/**" = ['ANN']
"setup.py" = ['ANN']

[tool.coverage.run]
source = [
    "src",
]

[tool.mypy]
python_version = "3.9"
exclude = "tests"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
show_error_codes = true
