[build-system]
requires = [
    'cython==3.1.2',
    'meson-python==0.18.0',
    'meson[ninja]==1.8.1',
]
build-backend = 'mesonpy'

[project]
name = "serialize-php"
version = "0.0.3"
description = "handle contents of serialize/deserialize in php"
license = { text = "MIT" }
requires-python = ">=3.9,<4.0"
authors = [
    { name = "trim21", email = "trim21me@gmail.com" },
]
readme = 'readme.md'
keywords = [
    "bencode",
    "bittorrent",
    "bit-torrent",
    "serialize",
    "deserialize",
    'p2p',
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    'typing-extensions>=4.12.2',
]

[project.urls]
Homepage = "https://github.com/trim21/php-serialize-py"
Repository = "https://github.com/trim21/php-serialize-py"
Issues = "https://github.com/trim21/php-serialize-py/issues"

# use flit to build a pure-python package
[tool.flit.module]
name = 'php_serialize'

[tool.cibuildwheel]
skip = "*musllinux*"

[tool.black]
target-version = ['py39']
line-length = 88

[tool.ruff]
line-length = 88

src = ['src', 'tests']

[tool.ruff.lint]
extend-select = ['UP', 'I', 'E', "W", 'FA', 'ANN']
ignore = ['ANN401', 'E721', 'E501']

[tool.ruff.lint.per-file-ignores]
"tests/**" = ['ANN']
"setup.py" = ['ANN']

[tool.coverage.run]
source = [
    "src",
]

[tool.mypy]
python_version = "3.9"
exclude = "tests"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
show_error_codes = true
